PROJECT(spooky)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

OPTION(BUILD_TESTS "Build google-tests" ON)
OPTION(BUILD_EXAMPLES "Build tests (requires all dependencies, including OpenGL)" ON)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -iquote ${CMAKE_CURRENT_SOURCE_DIR}/src")
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)


INCLUDE_DIRECTORIES(src)
ADD_SUBDIRECTORY(src)

IF (BUILD_TESTS)
    ADD_SUBDIRECTORY(tests)
ENDIF ()

IF (BUILD_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF ()