PROJECT(c003_tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -iquote ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_SUBDIRECTORY(extsrc/googletest)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

SET(SOURCE_FILES
        src/texPack_t.cpp
        )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

INCLUDE(FindLua REQUIRED)
FIND_PACKAGE(Lua REQUIRED)

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR} ${LUA_INCLUDE_DIR}/lua5.1 ${LUA_INCLUDE_DIR}/lua5.2 ${LUA_INCLUDE_DIR}/lua5.3)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LUA_LIBRARIES})

INCLUDE_DIRECTORIES(../src/ext/kaguya/include)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest gtest_main pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} c003_game)