PROJECT(c003_tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -iquote ${CMAKE_CURRENT_SOURCE_DIR}")
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)

SET(SOURCE_FILES
        src/texPack_t.cpp
        )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

INCLUDE(FindLua REQUIRED)
FIND_PACKAGE(Lua REQUIRED)

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR} ${LUA_INCLUDE_DIR}/lua5.1 ${LUA_INCLUDE_DIR}/lua5.2 ${LUA_INCLUDE_DIR}/lua5.3)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../src/ext/kaguya/include)

ADD_SUBDIRECTORY(src/ext/googletest)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LUA_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest gtest_main pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} c003_game_lib)