PROJECT(spooky_tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -iquote ${CMAKE_CURRENT_SOURCE_DIR}")

SET(SOURCE_FILES
        src/texPack_t.cpp
        )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

ADD_SUBDIRECTORY(src/ext/googletest)
INCLUDE_DIRECTORIES(SYSTEM ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest gtest_main)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} spooky_lib)